--- a/index-6.html
+++ b/index-6.html
@@ -38,6 +38,10 @@
     <h3>Computer's Choice: <span id="cpu-choice"></span></h3>
   </div>
 </div>
+<footer>
+  <p>&copy; 2024 Rock-Paper-Scissors Game | Created by Vedant</p>
+</footer>
+
 
 <script src="main.js"></script>
 </body>
