--- a/index-6.html
+++ b/index-6.html
@@ -39,7 +39,7 @@
   </div>
 </div>
 <footer>
-  <p>&copy; 2024 Rock-Paper-Scissors Game | Created by Vedant</p>
+  <p>&copy; 2024 Rock-Paper-Scissors Game | Created by Vedant & Jheel </p>
 </footer>
 
 
